[gd_scene load_steps=13 format=2]

[ext_resource path="res://Icons/gamename.png" type="Texture" id=1]
[ext_resource path="res://Icons/comp_logo.png" type="Texture" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Styles/MainMenuButton.tres" type="Theme" id=4]
[ext_resource path="res://fonts/Nokia.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/mouse_cursor.png" type="Texture" id=6]
[ext_resource path="res://Icons/Start_game.png" type="Texture" id=7]
[ext_resource path="res://Icons/close_game.png" type="Texture" id=8]
[ext_resource path="res://Icons/close_game_hv.png" type="Texture" id=9]
[ext_resource path="res://Icons/Start_game_hv.png" type="Texture" id=10]

[sub_resource type="Animation" id=2]
resource_name = "FloatIcons"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/MarginContainer/VBoxContainer/GameName:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 17 ), Vector2( 0, 7 ), Vector2( 0, 17 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/MarginContainer/VBoxContainer/Logo:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 113 ), Vector2( 32, 119 ), Vector2( 32, 113 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/MarginContainer/VBoxContainer/GameName:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/MarginContainer/VBoxContainer/Logo:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 47, 113 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.431373, 0.466667, 0.592157, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 270.0
margin_bottom = 330.0
size_flags_vertical = 3
custom_constants/margin_top = 80
custom_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 15.0
margin_top = 80.0
margin_right = 255.0
margin_bottom = 250.0
size_flags_horizontal = 6
custom_constants/separation = 0
alignment = 1

[node name="GameName" type="TextureRect" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 7.0
margin_right = 240.0
margin_bottom = 103.0
size_flags_horizontal = 6
texture = ExtResource( 1 )

[node name="Logo" type="TextureRect" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_left = 47.0
margin_top = 113.0
margin_right = 223.0
margin_bottom = 145.0
size_flags_horizontal = 6
texture = ExtResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_left = 2.0
margin_top = 334.0
margin_right = 268.0
margin_bottom = 462.0
size_flags_horizontal = 6
size_flags_vertical = 4
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2"]
margin_left = 50.0
margin_top = 50.0
margin_right = 216.0
margin_bottom = 78.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 15
alignment = 1

[node name="StartGame" type="TextureButton" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 166.0
margin_bottom = 28.0
size_flags_horizontal = 6
theme = ExtResource( 4 )
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 10 )
stretch_mode = 3

[node name="EndGame" type="TextureButton" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
visible = false
margin_top = 43.0
margin_right = 170.0
margin_bottom = 71.0
theme = ExtResource( 4 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="Extra" type="MarginContainer" parent="VBoxContainer"]
margin_top = 466.0
margin_right = 270.0
margin_bottom = 480.0

[node name="Label" type="Label" parent="VBoxContainer/Extra"]
margin_right = 270.0
margin_bottom = 14.0

[node name="ConfirmationDiag" type="MarginContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -50.0
margin_right = 100.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ConfirmationDiag"]
margin_right = 200.0
margin_bottom = 100.0
color = Color( 0.121569, 0.105882, 0.105882, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDiag"]
margin_left = 19.0
margin_top = 25.0
margin_right = 181.0
margin_bottom = 75.0
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ConfirmationDiag/VBoxContainer"]
margin_right = 162.0
margin_bottom = 24.0
size_flags_horizontal = 6
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 0

[node name="Label" type="Label" parent="ConfirmationDiag/VBoxContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 160.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 5 )
text = "Are you Sure?"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="ConfirmationDiag/VBoxContainer"]
margin_top = 28.0
margin_right = 162.0
margin_bottom = 50.0
custom_constants/margin_right = 10
custom_constants/margin_top = 1
custom_constants/margin_left = 10
custom_constants/margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationDiag/VBoxContainer/MarginContainer2"]
margin_left = 10.0
margin_top = 1.0
margin_right = 152.0
margin_bottom = 21.0
size_flags_horizontal = 3
alignment = 1

[node name="Accept" type="Button" parent="ConfirmationDiag/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 69.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Yes"

[node name="Reject" type="Button" parent="ConfirmationDiag/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 73.0
margin_right = 142.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "No"

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
autoplay = "FloatIcons"
anims/FloatIcons = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Cursor" type="Sprite" parent="."]
position = Vector2( 82, 218 )
z_index = 300
texture = ExtResource( 6 )
centered = false

[connection signal="pressed" from="VBoxContainer/MarginContainer2/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/VBoxContainer/EndGame" to="." method="_on_EndGame_pressed"]
